// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article renders correctly snapshot renders 1`] = `
<div
  className="d-flex justify-content-center"
  id="container"
>
  <div
    className="card"
  >
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        
      </h5>
      <div
        className="card-text"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <img
              alt=""
              id="img"
              src=""
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <h1>
              
            </h1>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <h4>
              
            </h4>
            <hr />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-9"
          >
            <h5
              className="timeText float-left"
            >
              <b>
                Publisert: 
              </b>
               
              
               av 
              
            </h5>
          </div>
          <div
            className="col-3"
          >
            <span>
              <p
                data-placement="top"
                data-toggle="tooltip"
                onClick={[Function]}
                title="Gi en like!!"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-thumbs-up fa-w-16 "
                  data-icon="thumbs-up"
                  data-prefix="fas"
                  focusable="false"
                  id="iconLikes"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M104 224H24c-13.255 0-24 10.745-24 24v240c0 13.255 10.745 24 24 24h80c13.255 0 24-10.745 24-24V248c0-13.255-10.745-24-24-24zM64 472c-13.255 0-24-10.745-24-24s10.745-24 24-24 24 10.745 24 24-10.745 24-24 24zM384 81.452c0 42.416-25.97 66.208-33.277 94.548h101.723c33.397 0 59.397 27.746 59.553 58.098.084 17.938-7.546 37.249-19.439 49.197l-.11.11c9.836 23.337 8.237 56.037-9.308 79.469 8.681 25.895-.069 57.704-16.382 74.757 4.298 17.598 2.244 32.575-6.148 44.632C440.202 511.587 389.616 512 346.839 512l-2.845-.001c-48.287-.017-87.806-17.598-119.56-31.725-15.957-7.099-36.821-15.887-52.651-16.178-6.54-.12-11.783-5.457-11.783-11.998v-213.77c0-3.2 1.282-6.271 3.558-8.521 39.614-39.144 56.648-80.587 89.117-113.111 14.804-14.832 20.188-37.236 25.393-58.902C282.515 39.293 291.817 0 312 0c24 0 72 8 72 81.452z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                   
                
              </p>
            </span>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <h5>
              
            </h5>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-true"
          >
            <a
              href="#/articles/edit/1"
              onClick={[Function]}
            >
              <button
                className="btn btn-dark"
              >
                Endre 
              </button>
            </a>
          </div>
        </div>
        <hr />
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <h4>
                    Kommentarer
                  </h4>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <button
                    className="btn btn-dark"
                    id="btnComment"
                    onClick={[Function]}
                  >
                    Skriv ny kommentar 
                  </button>
                  <hr />
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <div
                    id="containerNewComment"
                  >
                    <form>
                      <div
                        className="form-group"
                      >
                        <label>
                          Ditt navn:
                        </label>
                        <input
                          className="form-control"
                          id="inpName"
                          name="name"
                          placeholder="Skriv navnet ditt"
                          required={true}
                          type="text"
                        />
                      </div>
                      <div
                        className="form-group"
                      >
                        <label>
                          Din kommentar:
                        </label>
                        <textarea
                          className="form-control"
                          id="inpComment"
                          name="kommentar"
                          placeholder="Din kommentar..."
                          required={true}
                        />
                      </div>
                      <button
                        className="btn btn-dark"
                        onClick={[Function]}
                        type="button"
                      >
                        Lagre
                      </button>
                    </form>
                  </div>
                </div>
              </div>
              <div
                className="containerComments"
              />
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <p
                    onClick={[Function]}
                  >
                    Forrige
                  </p>
                </div>
                <div
                  className="col"
                >
                  1
                </div>
                <div
                  className="col"
                >
                  <p
                    onClick={[Function]}
                  >
                    Neste
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoryView snapshot renders 1`] = `
<div
  className="main"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h1 />
    </div>
  </div>
  <hr />
  <div
    className="row"
  />
  <hr />
  <div
    className="row"
  >
    <div
      className="col"
    >
      <p
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-backward fa-w-16 "
          data-icon="backward"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.5 280.6l192 160c20.6 17.2 52.5 2.8 52.5-24.6V96c0-27.4-31.9-41.8-52.5-24.6l-192 160c-15.3 12.8-15.3 36.4 0 49.2zm256 0l192 160c20.6 17.2 52.5 2.8 52.5-24.6V96c0-27.4-31.9-41.8-52.5-24.6l-192 160c-15.3 12.8-15.3 36.4 0 49.2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         
      </p>
    </div>
    <div
      className="col"
    >
      <p>
        Page 
        1
      </p>
    </div>
    <div
      className="col"
    >
      <p
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-forward fa-w-16 "
          data-icon="forward"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500.5 231.4l-192-160C287.9 54.3 256 68.6 256 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2zm-256 0l-192-160C31.9 54.3 0 68.6 0 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         
      </p>
    </div>
  </div>
</div>
`;

exports[`ChangeArticle renders without crashing snapshot renders 1`] = `
<div
  id="containerReg"
>
  <form>
    <div
      className="form-group"
    >
      <label>
        Overskrift: 
      </label>
      <input
        className="form-control"
        id="fname"
        name="headline"
        onChange={[Function]}
        placeholder="Skriv inn overskrift"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Ingress:
      </label>
      <textarea
        className="form-control"
        id="lname"
        name="ingress"
        onChange={[Function]}
        placeholder="Skriv inn innholdet"
        required={true}
        rows="2"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Innhold:
      </label>
      <textarea
        className="form-control"
        id="lname"
        name="contents"
        onChange={[Function]}
        placeholder="Skriv inn innholdet"
        required={true}
        rows="3"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Bilde:
      </label>
      <input
        className="form-control"
        id="fname"
        name="image"
        onChange={[Function]}
        placeholder="Skriv inn bilde-URL"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <label>
            Kategori: 
          </label>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <select
            className="btn btn-secondary"
            name="category"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <label>
            Viktighet 
          </label>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <label>
            1
            <input
              checked={false}
              name="importance"
              onChange={[Function]}
              type="radio"
              value={1}
            />
          </label>
          <label>
            2
            <input
              checked={false}
              name="importance"
              onChange={[Function]}
              type="radio"
              value={2}
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          Lagre
        </button>
      </div>
      <div
        className="col"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
           Slett 
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`CommentSingle snapshot renders 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <b>
        Max
        :
      </b>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      Meget bra
    </div>
  </div>
  <hr />
</div>
`;

exports[`CommentView snapshot renders 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h4>
        Kommentarer
      </h4>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <button
        className="btn btn-dark"
        id="btnComment"
        onClick={[Function]}
      >
        Skriv ny kommentar 
      </button>
      <hr />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        id="containerNewComment"
      >
        <form>
          <div
            className="form-group"
          >
            <label>
              Ditt navn:
            </label>
            <input
              className="form-control"
              id="inpName"
              name="name"
              placeholder="Skriv navnet ditt"
              required={true}
              type="text"
            />
          </div>
          <div
            className="form-group"
          >
            <label>
              Din kommentar:
            </label>
            <textarea
              className="form-control"
              id="inpComment"
              name="kommentar"
              placeholder="Din kommentar..."
              required={true}
            />
          </div>
          <button
            className="btn btn-dark"
            onClick={[Function]}
            type="button"
          >
            Lagre
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    className="containerComments"
  />
  <div
    className="row"
  >
    <div
      className="col"
    >
      <p
        onClick={[Function]}
      >
        Forrige
      </p>
    </div>
    <div
      className="col"
    >
      1
    </div>
    <div
      className="col"
    >
      <p
        onClick={[Function]}
      >
        Neste
      </p>
    </div>
  </div>
</div>
`;

exports[`Footer renders correctly snapshot renders 1`] = `
<div
  className="mainFooter row justify-content-center"
>
  <div
    className="mainFooter row justify-content-center"
  >
    <div
      id="col"
    >
      <a
        href="http://www.facebook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="fbook"
          id="imgLogo"
          src="facebook.png"
        />
      </a>
      <a
        href="http://www.twitter.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="twitter"
          id="imgLogo"
          src="twitter.png"
        />
      </a>
      <a
        href="http://www.flickr.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="flickr"
          id="imgLogo"
          src="flickr.png"
        />
      </a>
      <a
        href="http://www.instagram.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="insta"
          id="imgLogo"
          src="instagram.png"
        />
      </a>
      <a
        href="http://www.youtube.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="youtube"
          id="imgLogo"
          src="youtube.png"
        />
      </a>
    </div>
  </div>
  <div
    className="row justify-content-center"
  >
    <div
      id="col"
    >
      <h5>
        Kontakt: 
      </h5>
      <span>
        <b>
          Tlf: 
        </b>
        91782159 
      </span>
      <br />
      <span>
        <b>
          E-post: 
        </b>
        redaksjonen@kalvskinnetNews.com 
      </span>
    </div>
  </div>
</div>
`;

exports[`Footer renders correctly snapshot renders 2`] = `
<div
  className="mainFooter row justify-content-center"
>
  <div
    className="mainFooter row justify-content-center"
  >
    <div
      id="col"
    >
      <a
        href="http://www.facebook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="fbook"
          id="imgLogo"
          src="facebook.png"
        />
      </a>
      <a
        href="http://www.twitter.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="twitter"
          id="imgLogo"
          src="twitter.png"
        />
      </a>
      <a
        href="http://www.flickr.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="flickr"
          id="imgLogo"
          src="flickr.png"
        />
      </a>
      <a
        href="http://www.instagram.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="insta"
          id="imgLogo"
          src="instagram.png"
        />
      </a>
      <a
        href="http://www.youtube.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="youtube"
          id="imgLogo"
          src="youtube.png"
        />
      </a>
    </div>
  </div>
  <div
    className="row justify-content-center"
  >
    <div
      id="col"
    >
      <h5>
        Kontakt: 
      </h5>
      <span>
        <b>
          Tlf: 
        </b>
        91782159 
      </span>
      <br />
      <span>
        <b>
          E-post: 
        </b>
        redaksjonen@kalvskinnetNews.com 
      </span>
    </div>
  </div>
</div>
`;
